feat: more refactoring